--- a/static/css/main.css
+++ b/static/css/main.css
@@ -710,6 +710,7 @@ table.fullwidth {
 .apilos-link {
   display: inline !important;
   text-decoration: none !important;
+  background-image: none;
 }
 /*  */
 .apilos-multiselect {
@@ -818,7 +819,7 @@ button:not(:disabled).apilos-btn--secondary--red:hover {
 [class*="apilos-badge-"] {
   display:inline;
 }
-.apilos-badge {
+table .apilos-badge {
   min-width: 155px;
 }
 .apilos-badge-Projet {
@@ -916,7 +917,19 @@ button:not(:disabled).apilos-btn--secondary--red:hover {
   top: 0;
 }
 .apilos-sticky-2 {
-  top: 160px;
+  top: 176px;
+}
+.fr-container-fluid:has(.apilos-notice--warning) .apilos-sticky-2 {
+  top: 248px;
+}
+.recapitulatif .recapitulatif-link {
+  display: none;
+}
+.apilos-notice--warning {
+  background-color: var(--background-contrast-warning);
+}
+.apilos-notice--warning p {
+  color: var(--text-default-warning)
 }
 
 /*
