--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -44,6 +44,8 @@
         <!-- Matomo -->
 
         {% if ENVIRONMENT == "production" %}
+            <script src="https://stats.beta.gouv.fr/matomo.js" async nonce="{{request.csp_nonce}}"></script>
+
             <script type="text/javascript" nonce="{{request.csp_nonce}}">
                 var _paq = window._paq = window._paq || [];
                 /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
@@ -53,8 +55,9 @@
                     var u="https://stats.beta.gouv.fr/";
                     _paq.push(['setTrackerUrl', u+'matomo.php']);
                     _paq.push(['setSiteId', '100']);
-                    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-                    g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+
+                    /* var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+                    g.async=true; g.src=u+'matomo.js'; g.nonce='{{request.csp_nonce}}'; s.parentNode.insertBefore(g,s); */
                 })();
             </script>
         {% endif %}
