--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,6 +56,15 @@
   background-color: var(--background-action-low-blue-france);
   color: var(--text-action-high-blue-france);
 }
+.apilos--p-relative {
+  position: relative;
+}
+.apilos--right-top {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  z-index: 1;
+}
 
 .fr-icon--xxl {
   --icon-size: 4rem;
