--- a/templates/common/form/input_date.html
+++ b/templates/common/form/input_date.html
@@ -7,7 +7,7 @@
         </label>
     {% endif %}
     <div class="fr-mt-1w block--row-strech" id="{{form_input.id_for_label}}_div">
-        <div class="fr-input-wrap fr-icon-calendar-line block--row-strech-1">
+        <div class="fr-input-wrap block--row-strech-1">
             <input
                 class="fr-input {% if form_input.errors %}fr-input--error{% endif %}"
                 type="date"
